force-app/main/default/objects/KYC__c/KYC__c.object-meta.xml
<CustomObject>
    <description>Used to store information from the client about their business.</description>
    <label>KYC</label>
    <nameField>
        <displayFormat>KYC-{00000000}</displayFormat>
        <label>KYC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYCs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>