force-app/main/default/objects/KYC__c/fields/Adm_Address__c.field-meta.xml
<CustomField>
    <fullName>Adm_Address__c</fullName>
    <label>Administrative Address</label>
    <type>TextArea</type>
</CustomField>