force-app/main/default/objects/KYC__c/fields/Adm_City__c.field-meta.xml
<CustomField>
    <fullName>Adm_City__c</fullName>
    <label>Administrative City</label>
    <type>TextArea</type>
</CustomField>