force-app/main/default/objects/KYC__c/fields/Adm_Complement__c.field-meta.xml
<CustomField>
    <fullName>Adm_Complement__c</fullName>
    <label>Administrative Complement</label>
    <type>TextArea</type>
</CustomField>