force-app/main/default/objects/KYC__c/fields/Adm_Country__c.field-meta.xml
<CustomField>
    <fullName>Adm_Country__c</fullName>
    <label>Administrative Country</label>
    <type>TextArea</type>
</CustomField>