force-app/main/default/objects/KYC__c/fields/Adm_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Adm_Postal_Code__c</fullName>
    <label>Administrative Postal Code</label>
    <type>TextArea</type>
</CustomField>