force-app/main/default/objects/KYC__c/fields/Adm_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Adm_Street_Number__c</fullName>
    <label>Administrative Street Number</label>
    <type>TextArea</type>
</CustomField>