force-app/main/default/objects/KYC__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account</label>
    <type>TextArea</type>
</CustomField>