force-app/main/default/objects/KYC__c/fields/Bank_Account_Document__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Document__c</fullName>
    <label>Owner Account Document</label>
    <type>TextArea</type>
</CustomField>