force-app/main/default/objects/KYC__c/fields/Bank_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Owner__c</fullName>
    <label>Bank Account Owner</label>
    <type>TextArea</type>
</CustomField>