force-app/main/default/objects/KYC__c/fields/Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Number__c</fullName>
    <label>Bank Number</label>
    <type>TextArea</type>
</CustomField>