force-app/main/default/objects/KYC__c/fields/Bank_Option__c.field-meta.xml
<CustomField>
    <fullName>Bank_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Option</label>
    <referenceTo>Bank_Option__c</referenceTo>
    <relationshipLabel>KYCs</relationshipLabel>
    <relationshipName>KYCs</relationshipName>
    <type>Lookup</type>
</CustomField>