force-app/main/default/objects/KYC__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>TextArea</type>
</CustomField>