force-app/main/default/objects/KYC__c/fields/Corporate_Group__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Group</label>
    <type>Checkbox</type>
</CustomField>