force-app/main/default/objects/KYC__c/fields/Corporate_URL__c.field-meta.xml
<CustomField>
    <fullName>Corporate_URL__c</fullName>
    <label>Corporate URL</label>
    <type>Url</type>
</CustomField>