force-app/main/default/objects/KYC__c/fields/Fiscal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Registration__c</fullName>
    <label>Fiscal Registration</label>
    <type>TextArea</type>
</CustomField>