force-app/main/default/objects/KYC__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Magento 2.3</fullName>
            </value>
            <value>
                <fullName>PagBrasil.JS</fullName>
            </value>
            <value>
                <fullName>iFrame</fullName>
            </value>
            <value>
                <fullName>Link de Pagamento</fullName>
            </value>
            <value>
                <fullName>Shopify App</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>WooCommerce</fullName>
            </value>
            <value>
                <fullName>Prestashop</fullName>
            </value>
            <value>
                <fullName>VTEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>