force-app/main/default/objects/KYC__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <label>Legal Name</label>
    <type>TextArea</type>
</CustomField>