force-app/main/default/objects/KYC__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KYCs</relationshipLabel>
    <relationshipName>KYCs</relationshipName>
    <type>Lookup</type>
</CustomField>