force-app/main/default/objects/KYC__c/fields/Personal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Personal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KYCs (Personal Contact)</relationshipLabel>
    <relationshipName>Personal_KYCs</relationshipName>
    <type>Lookup</type>
</CustomField>