force-app/main/default/objects/KYC__c/fields/Proprietary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KYCs (Proprietary Contact)</relationshipLabel>
    <relationshipName>KYCs1</relationshipName>
    <type>Lookup</type>
</CustomField>