force-app/main/default/objects/KYC__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Product/Service Category</label>
    <type>TextArea</type>
</CustomField>