force-app/main/default/objects/KYC__c/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <label>Service Description</label>
    <type>TextArea</type>
</CustomField>