force-app/main/default/objects/KYC__c/fields/Service_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Service_Shipping__c</fullName>
    <label>Service Shipping</label>
    <type>TextArea</type>
</CustomField>