force-app/main/default/objects/KYC__c/fields/Store_URL__c.field-meta.xml
<CustomField>
    <fullName>Store_URL__c</fullName>
    <label>Store URL</label>
    <type>Url</type>
</CustomField>