force-app/main/default/objects/KYC__c/fields/Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name__c</fullName>
    <label>Trade Name</label>
    <type>TextArea</type>
</CustomField>