force-app/main/default/objects/KYC__c/validationRules/Validation_Legal_Approval_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Legal_Approval_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Legal_Approval_Status__c, &quot;Approved&quot;),
  NOT(ISNEW()),
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Cannot modify once approved.</errorMessage>
</ValidationRule>