force-app/main/default/objects/KYC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Legal_Name__c</columns>
    <columns>Trade_Name__c</columns>
    <columns>Address__c</columns>
    <columns>Store_URL__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fiscal_Registration__c</columns>
    <columns>Unique_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>