force-app/main/default/objects/KYC__c/listViews/Director_KYC.listView-meta.xml
<ListView>
    <fullName>Director_KYC</fullName>
    <filterScope>Queue</filterScope>
    <label>Director</label>
    <queue>Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>